crates/tlang_parser/tests/snapshots/parser__list_literal-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = [1, 2, 3];\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 8,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 7,
          kind: List([
            Expr(
              id: 4,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 9,
                end: 10,
                start_lc: LineColumn(
                  line: 0,
                  column: 9,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 10,
                ),
              ),
            ),
            Expr(
              id: 5,
              kind: Literal(UnsignedInteger(2)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 12,
                end: 13,
                start_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ),
            Expr(
              id: 6,
              kind: Literal(UnsignedInteger(3)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 15,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            ),
          ]),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 17,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 17,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 18,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 18,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 18,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 18,
    ),
  ),
)
