crates/tlang_parser/tests/snapshots/parser__loop_expression.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = loop { break 1 + 2; };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 11,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 10,
          kind: Loop(Block(
            id: 9,
            statements: [
              Stmt(
                id: 4,
                kind: Expr(Expr(
                  id: 8,
                  kind: Break(Some(Expr(
                    id: 7,
                    kind: BinaryOp(BinaryOpExpression(
                      op: Add,
                      lhs: Expr(
                        id: 5,
                        kind: Literal(UnsignedInteger(1)),
                        leading_comments: [],
                        trailing_comments: [],
                        span: Span(
                          start: 21,
                          end: 22,
                          start_lc: LineColumn(
                            line: 0,
                            column: 21,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 22,
                          ),
                        ),
                      ),
                      rhs: Expr(
                        id: 6,
                        kind: Literal(UnsignedInteger(2)),
                        leading_comments: [],
                        trailing_comments: [],
                        span: Span(
                          start: 25,
                          end: 26,
                          start_lc: LineColumn(
                            line: 0,
                            column: 25,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 26,
                          ),
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 21,
                      end: 26,
                      start_lc: LineColumn(
                        line: 0,
                        column: 21,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 26,
                      ),
                    ),
                  ))),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 15,
                    end: 26,
                    start_lc: LineColumn(
                      line: 0,
                      column: 15,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 26,
                    ),
                  ),
                )),
                span: Span(
                  start: 15,
                  end: 27,
                  start_lc: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 27,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: 13,
              end: 29,
              start_lc: LineColumn(
                line: 0,
                column: 13,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 29,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 29,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 29,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 30,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 30,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 30,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 30,
    ),
  ),
)
