crates/tlang_parser/tests/snapshots/parser__multi_line_comments-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"/* this is a comment\\n   spanning multiple lines */\\nlet x = 1;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 5,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 55,
              end: 56,
              start_lc: LineColumn(
                line: 2,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 2,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 55,
            end: 56,
            start_lc: LineColumn(
              line: 2,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 2,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 4,
          kind: Literal(UnsignedInteger(1)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 59,
            end: 60,
            start_lc: LineColumn(
              line: 2,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 2,
              column: 9,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 51,
        end: 61,
        start_lc: LineColumn(
          line: 2,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 2,
          column: 10,
        ),
      ),
      leading_comments: [
        CommentToken(
          kind: MultiLine,
          text: " this is a comment\n   spanning multiple lines ",
          span: Span(
            start: 0,
            end: 50,
            start_lc: LineColumn(
              line: 0,
              column: 0,
            ),
            end_lc: LineColumn(
              line: 1,
              column: 29,
            ),
          ),
        ),
      ],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 61,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 2,
      column: 10,
    ),
  ),
)
