crates/tlang_parser/tests/snapshots/parser__nested_call.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"foo(bar(1), 2);\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 9,
        kind: Call(CallExpression(
          callee: Expr(
            id: 4,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end: LineColumn(
                  line: 0,
                  column: 3,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 3,
              ),
            ),
          ),
          arguments: [
            Expr(
              id: 7,
              kind: Call(CallExpression(
                callee: Expr(
                  id: 5,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "bar",
                        span: Span(
                          start: LineColumn(
                            line: 0,
                            column: 4,
                          ),
                          end: LineColumn(
                            line: 0,
                            column: 7,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 4,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 7,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 4,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 7,
                    ),
                  ),
                ),
                arguments: [
                  Expr(
                    id: 6,
                    kind: Literal(UnsignedInteger(1)),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 8,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 9,
                      ),
                    ),
                  ),
                ],
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 4,
                ),
                end: LineColumn(
                  line: 0,
                  column: 10,
                ),
              ),
            ),
            Expr(
              id: 8,
              kind: Literal(UnsignedInteger(2)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 12,
                ),
                end: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 14,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 15,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 15,
    ),
  ),
)
