crates/tlang_parser/tests/snapshots/parser__pattern_matching-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse!\n(r\"\n        match foo; {\n            [] => Ok(bar),\n            [bar, ...baz] => Ok(qux),\n            _ => Err(error),\n        }\n        \")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 23,
        kind: Match(MatchExpression(
          expression: Expr(
            id: 4,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: LineColumn(
                      line: 1,
                      column: 15,
                    ),
                    end: LineColumn(
                      line: 1,
                      column: 18,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: LineColumn(
                  line: 1,
                  column: 15,
                ),
                end: LineColumn(
                  line: 1,
                  column: 18,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 1,
                column: 15,
              ),
              end: LineColumn(
                line: 1,
                column: 18,
              ),
            ),
          ),
          arms: [
            MatchArm(
              id: 9,
              pattern: Pat(
                id: 5,
                kind: List([]),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 2,
                    column: 13,
                  ),
                  end: LineColumn(
                    line: 2,
                    column: 15,
                  ),
                ),
              ),
              guard: None,
              expression: Expr(
                id: 8,
                kind: Call(CallExpression(
                  callee: Expr(
                    id: 6,
                    kind: Path(Path(
                      segments: [
                        Ident(
                          name: "Ok",
                          span: Span(
                            start: LineColumn(
                              line: 2,
                              column: 19,
                            ),
                            end: LineColumn(
                              line: 2,
                              column: 21,
                            ),
                          ),
                        ),
                      ],
                      res: Unresolved,
                      span: Span(
                        start: LineColumn(
                          line: 2,
                          column: 19,
                        ),
                        end: LineColumn(
                          line: 2,
                          column: 21,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 2,
                        column: 19,
                      ),
                      end: LineColumn(
                        line: 2,
                        column: 21,
                      ),
                    ),
                  ),
                  arguments: [
                    Expr(
                      id: 7,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "bar",
                            span: Span(
                              start: LineColumn(
                                line: 2,
                                column: 22,
                              ),
                              end: LineColumn(
                                line: 2,
                                column: 25,
                              ),
                            ),
                          ),
                        ],
                        res: Unresolved,
                        span: Span(
                          start: LineColumn(
                            line: 2,
                            column: 22,
                          ),
                          end: LineColumn(
                            line: 2,
                            column: 25,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 2,
                          column: 22,
                        ),
                        end: LineColumn(
                          line: 2,
                          column: 25,
                        ),
                      ),
                    ),
                  ],
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 2,
                    column: 19,
                  ),
                  end: LineColumn(
                    line: 2,
                    column: 26,
                  ),
                ),
              ),
            ),
            MatchArm(
              id: 17,
              pattern: Pat(
                id: 13,
                kind: List([
                  Pat(
                    id: 10,
                    kind: Identifier(Ident(
                      name: "bar",
                      span: Span(
                        start: LineColumn(
                          line: 3,
                          column: 14,
                        ),
                        end: LineColumn(
                          line: 3,
                          column: 17,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 3,
                        column: 14,
                      ),
                      end: LineColumn(
                        line: 3,
                        column: 17,
                      ),
                    ),
                  ),
                  Pat(
                    id: 11,
                    kind: Rest(Pat(
                      id: 12,
                      kind: Identifier(Ident(
                        name: "baz",
                        span: Span(
                          start: LineColumn(
                            line: 3,
                            column: 22,
                          ),
                          end: LineColumn(
                            line: 3,
                            column: 25,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 3,
                          column: 22,
                        ),
                        end: LineColumn(
                          line: 3,
                          column: 25,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 0,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 0,
                      ),
                    ),
                  ),
                ]),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 3,
                    column: 13,
                  ),
                  end: LineColumn(
                    line: 3,
                    column: 26,
                  ),
                ),
              ),
              guard: None,
              expression: Expr(
                id: 16,
                kind: Call(CallExpression(
                  callee: Expr(
                    id: 14,
                    kind: Path(Path(
                      segments: [
                        Ident(
                          name: "Ok",
                          span: Span(
                            start: LineColumn(
                              line: 3,
                              column: 30,
                            ),
                            end: LineColumn(
                              line: 3,
                              column: 32,
                            ),
                          ),
                        ),
                      ],
                      res: Unresolved,
                      span: Span(
                        start: LineColumn(
                          line: 3,
                          column: 30,
                        ),
                        end: LineColumn(
                          line: 3,
                          column: 32,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 3,
                        column: 30,
                      ),
                      end: LineColumn(
                        line: 3,
                        column: 32,
                      ),
                    ),
                  ),
                  arguments: [
                    Expr(
                      id: 15,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "qux",
                            span: Span(
                              start: LineColumn(
                                line: 3,
                                column: 33,
                              ),
                              end: LineColumn(
                                line: 3,
                                column: 36,
                              ),
                            ),
                          ),
                        ],
                        res: Unresolved,
                        span: Span(
                          start: LineColumn(
                            line: 3,
                            column: 33,
                          ),
                          end: LineColumn(
                            line: 3,
                            column: 36,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 3,
                          column: 33,
                        ),
                        end: LineColumn(
                          line: 3,
                          column: 36,
                        ),
                      ),
                    ),
                  ],
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 3,
                    column: 30,
                  ),
                  end: LineColumn(
                    line: 3,
                    column: 37,
                  ),
                ),
              ),
            ),
            MatchArm(
              id: 22,
              pattern: Pat(
                id: 18,
                kind: Wildcard,
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 4,
                    column: 13,
                  ),
                  end: LineColumn(
                    line: 4,
                    column: 14,
                  ),
                ),
              ),
              guard: None,
              expression: Expr(
                id: 21,
                kind: Call(CallExpression(
                  callee: Expr(
                    id: 19,
                    kind: Path(Path(
                      segments: [
                        Ident(
                          name: "Err",
                          span: Span(
                            start: LineColumn(
                              line: 4,
                              column: 18,
                            ),
                            end: LineColumn(
                              line: 4,
                              column: 21,
                            ),
                          ),
                        ),
                      ],
                      res: Unresolved,
                      span: Span(
                        start: LineColumn(
                          line: 4,
                          column: 18,
                        ),
                        end: LineColumn(
                          line: 4,
                          column: 21,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 4,
                        column: 18,
                      ),
                      end: LineColumn(
                        line: 4,
                        column: 21,
                      ),
                    ),
                  ),
                  arguments: [
                    Expr(
                      id: 20,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "error",
                            span: Span(
                              start: LineColumn(
                                line: 4,
                                column: 22,
                              ),
                              end: LineColumn(
                                line: 4,
                                column: 27,
                              ),
                            ),
                          ),
                        ],
                        res: Unresolved,
                        span: Span(
                          start: LineColumn(
                            line: 4,
                            column: 22,
                          ),
                          end: LineColumn(
                            line: 4,
                            column: 27,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 4,
                          column: 22,
                        ),
                        end: LineColumn(
                          line: 4,
                          column: 27,
                        ),
                      ),
                    ),
                  ],
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 4,
                    column: 18,
                  ),
                  end: LineColumn(
                    line: 4,
                    column: 28,
                  ),
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 1,
            column: 9,
          ),
          end: LineColumn(
            line: 5,
            column: 10,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 1,
          column: 9,
        ),
        end: LineColumn(
          line: 5,
          column: 10,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 1,
      column: 9,
    ),
    end: LineColumn(
      line: 5,
      column: 10,
    ),
  ),
)
