crates/tlang_parser/tests/snapshots/parser__pattern_matching.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = match 1 { 1 => 2, 3 => 4, _ => 5 };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 15,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 14,
          kind: Match(MatchExpression(
            expression: Expr(
              id: 4,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 14,
                end: 15,
                start_lc: LineColumn(
                  line: 0,
                  column: 14,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
              ),
            ),
            arms: [
              MatchArm(
                id: 7,
                pattern: Pat(
                  id: 5,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 18,
                    end: 19,
                    start_lc: LineColumn(
                      line: 0,
                      column: 18,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 19,
                    ),
                  ),
                ),
                guard: None,
                expression: Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(2)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 23,
                    end: 24,
                    start_lc: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 24,
                    ),
                  ),
                ),
              ),
              MatchArm(
                id: 10,
                pattern: Pat(
                  id: 8,
                  kind: Literal(UnsignedInteger(3)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 26,
                    end: 27,
                    start_lc: LineColumn(
                      line: 0,
                      column: 26,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 27,
                    ),
                  ),
                ),
                guard: None,
                expression: Expr(
                  id: 9,
                  kind: Literal(UnsignedInteger(4)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 31,
                    end: 32,
                    start_lc: LineColumn(
                      line: 0,
                      column: 31,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 32,
                    ),
                  ),
                ),
              ),
              MatchArm(
                id: 13,
                pattern: Pat(
                  id: 11,
                  kind: Wildcard,
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 34,
                    end: 35,
                    start_lc: LineColumn(
                      line: 0,
                      column: 34,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 35,
                    ),
                  ),
                ),
                guard: None,
                expression: Expr(
                  id: 12,
                  kind: Literal(UnsignedInteger(5)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 39,
                    end: 40,
                    start_lc: LineColumn(
                      line: 0,
                      column: 39,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 40,
                    ),
                  ),
                ),
              ),
            ],
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 42,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 42,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 43,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 43,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 43,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 43,
    ),
  ),
)
